Update 2018 data Reprocessed the 2018 HTML data to better match between preliminary and final results. Contribute to developmentseed/af-elections#228

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 2018-wolesi-jirga/results.csv filter=lfs diff=lfs merge=lfs -text
+2018-wolesi-jirga/results.sqlite filter=lfs diff=lfs merge=lfs -text
